fixed UI irregular overlapping bug

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,143 +1,142 @@
-.header{
-    width: 100%;
-    height: 36vh;
-    min-height: 290px;
-    background-image: url('../images/pattern-bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: left center;
-    text-align: center;
-    position: relative;
-    z-index: 0;
+.header {
+  width: 100%;
+  height: 36vh;
+  min-height: 290px;
+  background-image: url("../images/pattern-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left center;
+  text-align: center;
 
-    h1{
-        margin: 0;
-        padding: 1.875rem 0rem;
-        font-size: calc(1rem + 1.2vw);
-        color: white;
-        font-weight: 500;
+  h1 {
+    margin: 0;
+    padding: 1.875rem 0rem;
+    font-size: calc(1rem + 1.2vw);
+    color: white;
+    font-weight: 500;
+  }
+
+  .form {
+    margin: 0 auto;
+    padding: 0;
+    width: 87%;
+    max-width: 560px;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+
+    input,
+    button {
+      padding: 1rem 1.5rem;
+      border: 0;
+      outline: 0;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    input[type="text"] {
+      width: 100%;
+      font-size: 1.125rem;
+      border-radius: 10px 0px 0px 10px;
     }
 
-    .form{
-        margin:0 auto; padding:0;
-        width: 87%;
-        max-width: 560px;
-        display: flex;
-        justify-content: center;
-        border-radius: 10px;
-
-
-        input, button{
-            padding: 1rem 1.5rem;
-            border: 0; outline:0;
-
-            &:hover{
-                cursor: pointer;
-            }
-        }
-        input[type="text"]{
-            width: 100%;
-            font-size: 1.125rem;
-            border-radius: 10px 0px 0px 10px;
-        }
-
-        button{
-            background-color: $veryDarkGray;
-            border-radius: 0px 10px 10px 0px;
-            &:hover{
-                opacity: 0.92;
-            }
-        }
+    button {
+      background-color: $veryDarkGray;
+      border-radius: 0px 10px 10px 0px;
+      &:hover {
+        opacity: 0.92;
+      }
     }
+  }
 
-    #info{
-        width: 87%;
-        max-width: 1120px;
-        background-color: white;
-        padding: 1.75rem 0rem;
-        position: absolute;
-        bottom: calc(-163px - 3vh);
-        left: 50%;
-        transform: translateX(-50%);
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        row-gap: 0.875rem;
+  #info {
+    width: 87%;
+    max-width: 1120px;
+    background-color: white;
+    padding: 1.75rem 0rem;
+    position: absolute;
+    top: calc(36vh - 6.5vw);
+    left: 50%;
+    z-index: 999;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: 0.875rem;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 
-        .info-item{
-            width: 100%;
+    .info-item {
+      width: 100%;
 
-            h3{
-                font-size: 0.625rem;
-                color: $darkGray;
-                letter-spacing: 1px;
-                margin-bottom: 0.875rem;
-            }
-            p{
-                font-size: 1.125rem;
-                color: $veryDarkGray;
-                font-weight: 700;
-            }
-        }
-        .divider{
-            margin: 0; padding: 0;
-            display: inline-block;
-            height: 1px;
-            background-color: #e4e4e4;
-            width: 35%;
-            border-radius: 10px;
-        }
+      h3 {
+        font-size: 0.625rem;
+        color: $darkGray;
+        letter-spacing: 1px;
+        margin-bottom: 0.875rem;
+      }
+      p {
+        font-size: 1.125rem;
+        color: $veryDarkGray;
+        font-weight: 700;
+      }
     }
+    .divider {
+      margin: 0;
+      padding: 0;
+      display: inline-block;
+      height: 1px;
+      background-color: #e4e4e4;
+      width: 35%;
+      border-radius: 10px;
+    }
+  }
 }
 
-@media only screen and (min-width: 575px){
-    .header{
+@media only screen and (min-width: 575px) {
+  .header {
+    #info {
+      flex-wrap: nowrap;
+      align-items: flex-start;
+      padding: 2.5rem 1rem;
+      column-gap: 1rem;
+      text-align: left;
+      top: calc(36vh - 0vw);
 
-        #info{
-        
-            flex-wrap: nowrap;
-            align-items: flex-start;
-            padding: 2.5rem 1rem;
-            column-gap: 1rem;
-            text-align: left;
-            bottom: calc(-70px - 2.5vh);
+      .info-item {
+        flex: 0 1 23%;
 
-            .info-item{
-                flex: 0 1 23%;
-                
-               
-                p{
-                    font-size: 1rem;
-                }
-            }
-
-            .divider{
-              flex: 0 1 1px;
-              height: 50px;
-              
-            }
-
+        p {
+          font-size: 1rem;
         }
+      }
+
+      .divider {
+        flex: 0 1 1px;
+        height: 50px;
+      }
     }
+  }
 }
 
-@media only screen and (min-width: 768px){
-    .header{
-        h1{
-            padding: 2.1875rem 0rem;
-        }
-
-        #info{
-            padding: 2.5rem 1.875rem;
-            .info-item{
-                h3{
-                    font-size: 0.75rem;
-                }
-                p{
-                    font-size: 1.25rem;
-                }
-            }
-        }
+@media only screen and (min-width: 768px) {
+  .header {
+    h1 {
+      padding: 2.1875rem 0rem;
     }
+
+    #info {
+      padding: 2.5rem 1.875rem;
+      top: calc(36vh - 3.5vw);
+      .info-item {
+        h3 {
+          font-size: 0.75rem;
+        }
+        p {
+          font-size: 1.25rem;
+        }
+      }
+    }
+  }
 }
