--- a/css/style.css
+++ b/css/style.css
@@ -368,8 +368,6 @@ body {
   background-size: cover;
   background-position: left center;
   text-align: center;
-  position: relative;
-  z-index: 0;
 }
 
 .header h1 {
@@ -394,13 +392,15 @@ body {
   border-radius: 10px;
 }
 
-.header .form input, .header .form button {
+.header .form input,
+.header .form button {
   padding: 1rem 1.5rem;
   border: 0;
   outline: 0;
 }
 
-.header .form input:hover, .header .form button:hover {
+.header .form input:hover,
+.header .form button:hover {
   cursor: pointer;
 }
 
@@ -425,8 +425,9 @@ body {
   background-color: white;
   padding: 1.75rem 0rem;
   position: absolute;
-  bottom: calc(-163px - 3vh);
+  top: calc(36vh - 6.5vw);
   left: 50%;
+  z-index: 999;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   border-radius: 10px;
@@ -439,6 +440,8 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   row-gap: 0.875rem;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+          box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .header #info .info-item {
@@ -479,7 +482,7 @@ body {
     -webkit-column-gap: 1rem;
             column-gap: 1rem;
     text-align: left;
-    bottom: calc(-70px - 2.5vh);
+    top: calc(36vh - 0vw);
   }
   .header #info .info-item {
     -webkit-box-flex: 0;
@@ -503,6 +506,7 @@ body {
   }
   .header #info {
     padding: 2.5rem 1.875rem;
+    top: calc(36vh - 3.5vw);
   }
   .header #info .info-item h3 {
     font-size: 0.75rem;
@@ -515,6 +519,5 @@ body {
 #map {
   height: 64vh;
   min-height: 520px;
-  background-color: aquamarine;
 }
 /*# sourceMappingURL=style.css.map */
